<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90323232"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/spare_part"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mp_white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/mp_white"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="#90323232">

                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/audioseek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-15dp"
                        android:layout_marginRight="-15dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="0dp"
                        android:progressDrawable="@drawable/seekbar_progress_g"
                        android:thumb="@drawable/seek_thumb"
                        android:thumbOffset="10dp" />
                </FrameLayout>


                <LinearLayout
                    android:id="@+id/record_play_time_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:visibility="gone">

                    <Chronometer
                        android:id="@+id/palay_time_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/record_time_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="00:11:18"
                        android:textSize="14sp" />
                </LinearLayout>

                <Chronometer
                    android:id="@+id/recduration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColor="#ff333333"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/record_state_tview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/mp_click_record"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/record_icon"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/prepare_record_icon" />

                <LinearLayout
                    android:id="@+id/file_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mp_file_name"
                        android:textSize="14sp" />

                    <com.lqwawa.apps.views.ContainsEmojiEditText
                        android:id="@+id/file_name_edittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="2"
                        android:background="@drawable/mp_gray_5dp_white"
                        android:imeOptions="flagNoFullscreen|flagNoExtractUi"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#e8e8e8"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/mp_cancel"
            android:textColor="@color/mp_text_green"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/rerecord_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#B9B9B9" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#e8e8e8"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/mp_rerecord"
                android:textColor="@color/mp_text_green"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#B9B9B9" />
        </LinearLayout>

        <TextView
            android:id="@+id/upload_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#e8e8e8"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/mp_upload"
            android:textColor="@color/mp_text_green"
            android:textSize="18sp"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>
